Priyansh added Text changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="top-container">
         <img src="images/cloud.png" class="top-cloud" alt="cloud image" srcset="">
-        <h1>I'm Priyansh</h1>
+        <h1>I'm Priyansh Verma</h1>
         <h2>a <span>pro</span>grammer</h2>
         <img src="images/cloud.png" class="bottom-cloud" alt="cloud image" srcset="">
         <img src="images/mountain.png" alt="cloud image" srcset="">
@@ -38,11 +38,14 @@
             <div class="skill-row">
                 <img class="coding-img" src="images/coding (2).png" alt="">
                 <h3>Competitive Programming</h3>
-                <p>I started learning to code when I was in class 11th because I love Mathematics and Logical thinking .</p>
+                <p>I started learning to code when I was in class 11th because I love Mathematics and Logical thinking .
+                </p>
             </div>
 
             <div class="skill-row">
-                <img class="web-img" src="https://media4.giphy.com/media/kEbPufAQAhh6FaFlFt/giphy.gif?cid=ecf05e47u9i30rdr77598dzttrklw2v5srfvukkgs39qdbk1&rid=giphy.gif&ct=s" width="158px" alt="">
+                <img class="web-img"
+                    src="https://media4.giphy.com/media/kEbPufAQAhh6FaFlFt/giphy.gif?cid=ecf05e47u9i30rdr77598dzttrklw2v5srfvukkgs39qdbk1&rid=giphy.gif&ct=s"
+                    width="158px" alt="">
                 <h3>Web Development</h3>
                 <p>I can make a nice and simple Website for you having good functionality.</p>
             </div>
