--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="top-container">
         <img src="images/cloud.png" class="top-cloud" alt="cloud image" srcset="">
-        <h1>I'm Priyansh Verma</h1>
+        <h1>I'm Priyansh</h1>
         <h2>a <span>pro</span>grammer</h2>
         <img src="images/cloud.png" class="bottom-cloud" alt="cloud image" srcset="">
         <img src="images/mountain.png" alt="cloud image" srcset="">
